# e2e-test-tanaka-20260220-0011

./: package-lock.json  pyproject.toml
.research/: research_history.json
.research/latex/mdpi/: main.tex  references.bib
.research/results/: stdout.txt
.research/results/proposed-flan-t5-large-gsm8k/: metrics.json
config/: config.yaml
config/run/: comparative-1-flan-t5-large-gsm8k.yaml  proposed-flan-t5-large-gsm8k.yaml
src/: evaluate.py  inference.py  main.py  model.py  preprocess.py
