# Please list the required python packages.

[project]
name = "dt-seacot-experiment"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
    "hydra-core>=1.3.0",
    "wandb>=0.15.0",
    "optuna>=3.3.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "omegaconf>=2.3.0",
    "tqdm>=4.65.0",
]